src/styles/components/filter-buttons.scss
@import 'variables';
@import 'mixins';

$light-line: #e0e0e0;
$lightest-gray: #fafafa;
$text-black: rgba(0, 0, 0, 0.87);
$text-black3: rgba(0, 0, 0, 0.54);

.filter {
    color: color(gray);
    left: 0;
    margin: 0 auto;
    max-width: 70rem;
    position: absolute;
    right: 0;
    top: -2.1rem;
    z-index: 1;

    &::before,
    &::after {
        border-right: 0.2rem solid;
        color: color(neutral-lighter);
        content: '';
        display: block;
        height: 1.2rem;
        position: absolute;
        right: 4.3rem;
        top: 2rem;
        transform: rotate3d(0, 0, 1, 135deg);
        width: 0;
        z-index: 1;

        @include desktop {
            display: none;
        }
    }

    &::after {
        right: 3.5rem;
        transform: rotate3d(0, 0, 1, 45deg);
    }
}

.filter-buttons {
    background-color: color(neutral-lightest);
    border: 0.1rem solid color(neutral-lighter);
    display: flex;
    flex-flow: column nowrap;
    font-size: 1.8rem;
    line-height: 1.8rem;
    margin: 0 1.5rem;

    @include desktop {
        border-right: 0;
        flex-flow: row nowrap;
        margin: 0;
    }

    .filter-button {
        cursor: pointer;
        overflow: hidden;
        padding: 1.5rem;

        @include desktop {
            border-right: 0.1rem solid color(neutral-lighter);
            flex: 1 auto;
            text-align: center;
        }

        &.selected {
            order: -1;

            @include desktop {
                order: 0;
            }

            &::before {
                color: color(neutral-lighter);
                content: 'Filter By: ';
                display: inline;
                font-weight: 500;

                @include desktop {
                    content: '';
                    font-weight: 300;
                }
            }
        }

        &:not(.selected) {
            height: 0;
            opacity: 0;
            padding: 0;
            transition: opacity 0.3s;
            width: 0;

            @at-root .active#{&} {
                height: inherit;
                opacity: 1;
                padding: 1rem 1.5rem;
                width: 100%;

                @include desktop {
                    height: auto;
                    padding: 1.5rem;
                    width: auto;
                }
            }

            @include desktop {
                background-color: lighten(color(neutral-lighter), 8%);
                height: auto;
                opacity: 1;
                padding: 1.5rem;
                width: auto;
            }

            &:hover {
                background-color: lighten(color(neutral-lighter), 8%);
            }
        }
    }
}

